Fix button height on mobile

--- a/assets/app.css
+++ b/assets/app.css
@@ -352,7 +352,6 @@ button:focus{
 .submit-button{
     border-radius:5px;
     background-color:#2d2d2d;
-    height:50px;
     color:#fff;
     padding:16px 28px;
     margin-right: 20px;
